# PrimitiveAssembler

./: .gitignore  Cargo.toml
doc/: triangle_fan.md  triangle_strip.md
src/: lib.rs  line.rs  quadruple.rs  triangle.rs
